Update SQL imports and queries: adjust file paths, enhance queries, and set date style

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,21 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "departments = pd.read_csv('departments.csv') #, index_col = 'dept_no')\n",
-    "dept_emp = pd.read_csv('dept_emp.csv') #, index_col = 'emp_no')\n",
-    "dept_manager = pd.read_csv('dept_manager.csv') #, index_col = 'dept_no')\n",
-    "employees = pd.read_csv('employees.csv') #, index_col = 'emp_no')\n",
-    "salaries = pd.read_csv('salaries.csv') #, index_col = 'emp_no')\n",
-    "titles = pd.read_csv('titles.csv') #, index_col = 'title_id')"
+    "departments = pd.read_csv('EmployeeSQL/data/departments.csv') #, index_col = 'dept_no')\n",
+    "dept_emp = pd.read_csv('EmployeeSQL/data/dept_emp.csv') #, index_col = 'emp_no')\n",
+    "dept_manager = pd.read_csv('EmployeeSQL/data/dept_manager.csv') #, index_col = 'dept_no')\n",
+    "employees = pd.read_csv('EmployeeSQL/data/employees.csv') #, index_col = 'emp_no')\n",
+    "salaries = pd.read_csv('EmployeeSQL/data/salaries.csv') #, index_col = 'emp_no')\n",
+    "titles = pd.read_csv('EmployeeSQL/data/titles.csv') #, index_col = 'title_id')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "8    d009    Customer Service"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,29 +157,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
+       "      <th>10</th>\n",
+       "      <td>10010</td>\n",
+       "      <td>d006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>10018</td>\n",
        "      <td>d005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10002</td>\n",
+       "      <th>31</th>\n",
+       "      <td>10029</td>\n",
+       "      <td>d006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>10040</td>\n",
+       "      <td>d008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>10050</td>\n",
        "      <td>d007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10003</td>\n",
-       "      <td>d004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10004</td>\n",
-       "      <td>d004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>d003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -187,59 +187,59 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331598</th>\n",
-       "      <td>499995</td>\n",
-       "      <td>d004</td>\n",
+       "      <th>331554</th>\n",
+       "      <td>499955</td>\n",
+       "      <td>d009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331599</th>\n",
-       "      <td>499996</td>\n",
-       "      <td>d004</td>\n",
+       "      <th>331564</th>\n",
+       "      <td>499964</td>\n",
+       "      <td>d006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331600</th>\n",
-       "      <td>499997</td>\n",
-       "      <td>d005</td>\n",
+       "      <th>331576</th>\n",
+       "      <td>499975</td>\n",
+       "      <td>d003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331601</th>\n",
-       "      <td>499998</td>\n",
-       "      <td>d002</td>\n",
+       "      <th>331585</th>\n",
+       "      <td>499983</td>\n",
+       "      <td>d009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>331602</th>\n",
-       "      <td>499999</td>\n",
-       "      <td>d004</td>\n",
+       "      <th>331595</th>\n",
+       "      <td>499992</td>\n",
+       "      <td>d003</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>331603 rows × 2 columns</p>\n",
+       "<p>31579 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        emp_no dept_no\n",
-       "0        10001    d005\n",
-       "1        10002    d007\n",
-       "2        10003    d004\n",
-       "3        10004    d004\n",
-       "4        10005    d003\n",
+       "10       10010    d006\n",
+       "19       10018    d005\n",
+       "31       10029    d006\n",
+       "43       10040    d008\n",
+       "54       10050    d007\n",
        "...        ...     ...\n",
-       "331598  499995    d004\n",
-       "331599  499996    d004\n",
-       "331600  499997    d005\n",
-       "331601  499998    d002\n",
-       "331602  499999    d004\n",
+       "331554  499955    d009\n",
+       "331564  499964    d006\n",
+       "331576  499975    d003\n",
+       "331585  499983    d009\n",
+       "331595  499992    d003\n",
        "\n",
-       "[331603 rows x 2 columns]"
+       "[31579 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dept_emp"
+    "dept_emp.loc[dept_emp.duplicated('emp_no'),:]"
    ]
   },
   {
